--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Contact#index</h1>
-<p>Find me in app/views/contact/index.html.erb</p>
+<div class="text-center">
+<h1>Contact</h1>
+</div>
+<div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <%=link_to "projects", projects_index_path, class:"nav-link" %>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact/index">contact</a>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <%= image_tag "1.jpg", alt: "IMAGEN DE PORTADA"%>
+    <div>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
