--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,24 +1,24 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/home/index""">projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">contact</a>
-        </li>
-      </ul>
-    </div>
+<div class="text-center">
+<h1>OLIVE&ANGELO</h1>
+</div>
+<div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <%=link_to "projects", projects_index_path, class:"nav-link" %>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact/index">contact</a>
+      </li>
+    </ul>
   </div>
-</nav>
+  <div class="card-body">
+    <%= image_tag "portada.jpg", alt: "IMAGEN DE PORTADA"%>
+    <div>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
