--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,13 +1,25 @@
-<h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
-
-
-<div class="card" style="width: 18rem;">
-  <img src="./assets/images/1.jpg" class="card-img-top" alt="...">
-  <%= image_tag "1.jpg",class: "card-img-top", heigth: 300 %>
+<div class="text-center">
+<h1>Projects</h1>
+</div>
+<div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <%=link_to "projects", projects_index_path, class:"nav-link" %>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact/index">contact</a>
+      </li>
+    </ul>
+  </div>
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title">Special title treatment</h5>
+    <%= image_tag "3.jpg", alt: "IMAGEN DE PORTADA"%>
+    <div>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
