--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
 <h1>OLIVE&ANGELO</h1>
 </div>
-<div class="card text-center">
+<div class="card">
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs">
       <li class="nav-item">
@@ -15,10 +15,12 @@
       </li>
     </ul>
   </div>
-  <div class="card-body">
-    <%= image_tag "portada.jpg", alt: "IMAGEN DE PORTADA"%>
+  <div class="col card">
+    <%= image_tag "portada.jpg", alt: "IMAGEN DE PORTADA" %>
     <div>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="text-center"> 
+ <a href="#" class="btn btn-primary">ver mas</a>
+</div>
+   
   </div>
 </div>
