--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,11 +15,40 @@
       </li>
     </ul>
   </div>
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <%= image_tag "3.jpg", alt: "IMAGEN DE PORTADA"%>
-    <div>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+<div class="row">
+<div class="col card" style="width: 18rem;">
+    <%= image_tag "1.jpg",class: "card-img-top"%> 
+    <div class="card-body">
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+  <div class="card-footer">
+    Card footer
+  </div>
+</div>
+
+<div class="col card" style="width: 18rem;">
+<%= image_tag "4.jpg",class: "card-img-top"%> 
+<div class="card-body">
+<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <div class="card-footer">
+    Card footer
+  </div>
+</div>
+
+  
+<div class="col card" style="width: 18rem;">
+<%= image_tag "3.jpg",class: "card-img-top"%> 
+<div class="card-body">
+<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <div class="card-footer">
+    Card footer
+  </div>
+</div>
+
+
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
