--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="card-body">
     <h5 class="card-title">Special title treatment</h5>
-    <%= image_tag "1.jpg", alt: "IMAGEN DE PORTADA"%>
+    <%= image_tag "contactos.jpg", alt: "IMAGEN DE PORTADA" %>
     <div>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
